--- a/index.html
+++ b/index.html
@@ -13,13 +13,35 @@
     <div class="container">
         <div class="menu">
             <div class="menu__item">
-                <a href="">Меню</a>
+                <p>Меню</p>
+                <div class="menu__down">
+                    <div class="menu__types">
+                        <!-- cones -->
+                        <a href="index.html">Рожки</a>
+                    </div>
+                    <div class="menu__types">
+                        <!-- eskimo -->
+                        <a href="eskimo.html">Эскимо</a>
+                    </div>
+                    <div class="menu__types">
+                        <!-- cups -->
+                        <a href="cups.html">Стаканчики</a>
+                    </div>
+                </div>
             </div>
             <div class="menu__item">
-                <a href="">Доставка</a>
+                <a href="deliver.html">Доставка</a>
             </div>
             <div class="menu__item">
-                <a href="">О магазине</a>
+                <a href="about.html">О магазине</a>
+            </div>
+            <div class="menu__item">
+                <p><img src="/imgs/basket x 100.png" alt=""></p>
+                <div class="menu__down">
+                    <div class="menu__types basket">
+                        <p>Корзина пуста</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -27,9 +49,14 @@
             <div class="content__row">
                 <div class="content__card">
                     <div class="content__front">
-                        <img src="/imgs/клубн рож.png" alt="">
+                        <img src="/imgs/радуга.png" alt="">
                     </div>
-                    <div class="content__back">Описание 1</div>
+                    <div class="content__back">
+                        <p>Рожок «Радуга»</p>
+                        <p>Всё натурально!</p>
+                        <p>ваша<br>ориентация</p>
+                        <input type="button" class="add" value="Добавить">
+                    </div>
                 </div>
                 <div class="content__card">
                     <div class="content__front">
@@ -39,50 +66,21 @@
                         <p>Клубничный рожок</p>
                         <p>Самый вкусный в вашей жизни!</p>
                         <p>бесценен</p>
+                        <input type="button" class="add" value="Добавить">
                     </div>
                 </div>
                 <div class="content__card">
                     <div class="content__front">
-                        <img src="/imgs/клубн рож.png" alt="">
+                        <img src="" alt="">
                     </div>
-                    <div class="content__back">Описание 3</div>
-                </div>
-            </div>
-            <div class="content__row">
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="/imgs/клубн рож.png" alt="">
-                    </div>
-                    <div class="content__back">Описание 4</div>
-                </div>
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="/imgs/клубн рож.png" alt="">
-                    </div>
-                    <div class="content__back">Описание 5</div>
-                </div>
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="/imgs/клубн рож.png" alt="">
-                    </div>
-                    <div class="content__back">Описание 6</div>
-                </div>
-            </div>
-            <div class="content__row">
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="/imgs/клубн рож.png" alt="">
-                    </div>
-                    <div class="content__back">Описание 7</div>
+                    <div class="content__back"></div>
                 </div>
             </div>
         </div>
 
         <div class="footer">
             <div class="footer__content">
-                Курсовая работа Витухиной Н.А.<br>
-                ИКБО-01-19<br>
-                2020
+                &#169; <a href="https://vk.com/sahbdexhuk" target="_blank"><img src="/imgs/vk x 25.png" alt=""></a>
             </div>
         </div>
     </div>
