--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="menu__types">
                         <!-- cups -->
-                        <a href="cups.html">Стаканчики</a>
+                        <a href="cups.html">Ванночки</a>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                         <ul style="display: block; padding-left: 15px; line-height: 16px;">
                             <li><a href="index.html">Рожки</a></li>
                             <li><a href="eskimo.html">Эскимо</a></li>
-                            <li><a href="cups.html">Стаканчики</a></li>
+                            <li><a href="cups.html">Ванночки</a></li>
                         </ul>
                     </li>
                     <li><a href="deliver.html">Доставка</a></li>
