--- a/about.html
+++ b/about.html
@@ -63,7 +63,8 @@
                     Разработка клиентских частей интернет ресурсов и теме
                     «Магазин мороженого».</p><br>
                 <p>Корзина работает в пределах одной сессии страницы, так как работа не предусматривает серверной части.
-                </p>
+                </p><br>
+                <p>Сломала мобильную версию... &#x2639;</p>
             </div>
         </div>
 
