--- a/eskimo.html
+++ b/eskimo.html
@@ -58,9 +58,14 @@
             <div class="content__row">
                 <div class="content__card">
                     <div class="content__front">
-                        <img src="" alt="">
+                        <img src="/imgs/бетон.png" alt="">
                     </div>
-                    <div class="content__back"></div>
+                    <div class="content__back">
+                        <p>Бетон</p>
+                        <p>С привкусом бесконечных дорожных работ</p>
+                        <p>150</p>
+                        <input type="button" class="add" value="Добавить" onclick="add(3)">
+                    </div>
                 </div>
                 <div class="content__card">
                     <div class="content__front">
