--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" id="vp" content="width=device-width, initial-scale=1">
     <title>Просрочка</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="/js/action.js"></script>
@@ -12,6 +13,11 @@
 <body>
     <div class="container">
         <div class="menu">
+
+            <!-- <input id="toggle" type="checkbox"> -->
+
+
+
             <div class="menu__item">
                 <p>Меню</p>
                 <div class="menu__down">
@@ -109,6 +115,7 @@
 
         <div class="footer">
             <!-- Иконочки от Tilda Publishing https://tilda.cc -->
+            <!-- <div class="footer__mobile"> -->
             <div class="footer__block">
                 <h1>Быстрая навигация</h1>
                 <ul>
@@ -128,7 +135,7 @@
                     <div class="footer__block">
                         <h1>Управление версиями</h1>
                         <div class="footer__block_double">
-                            <img src="/imgs/Tilda_Icons_40_IT_website.svg" alt="">
+                            <img src="/imgs/Tilda_Icons_40_IT_website.svg" alt="" onclick="toWEB()">
                             <img src="/imgs/Tilda_Icons_40_IT_app.svg" alt="">
                         </div>
                     </div>
@@ -143,6 +150,7 @@
                     </div>
                 </div>
             </div>
+            <!-- </div> -->
             <div class="footer__block">
                 <h1>Обратная связь</h1>
                 <div class="footer__comm">
