--- a/cups.html
+++ b/cups.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="footer__comm">
                     <img src="/imgs/Tilda_Icons_40_IT_letter.svg" alt="">
-                    <p><a href="mailto:vituchina11natasha11@gmail.com">vituchina11natasha11@gmail.com</a></p>
+                    <p><a href="mailto:652213kn56@gmail.com">652213kn56@gmail.com</a></p>
                 </div>
             </div>
         </div>
