--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" id="vp" content="width=device-width, initial-scale=1">
     <title>Просрочка</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> -->
+    <link rel="stylesheet" type="text/css" media="(max-width: 640px)" href="/css/mobile.css">
+    <link rel="stylesheet" type="text/css" media="(min-width: 641px) and (max-width: 1023px)" href="/css/tab.css">
+    <link rel="stylesheet" type="text/css" media="(min-width: 1024px)" href="/css/web.css">
     <script src="/js/action.js"></script>
     <link rel="shortcut icon" href="/imgs/favicon.png" type="image/png">
 </head>
@@ -136,7 +139,7 @@
                         <h1>Управление версиями</h1>
                         <div class="footer__block_double">
                             <img src="/imgs/Tilda_Icons_40_IT_website.svg" alt="" onclick="toWEB()">
-                            <img src="/imgs/Tilda_Icons_40_IT_app.svg" alt="">
+                            <img src="/imgs/Tilda_Icons_40_IT_app.svg" alt="" onclick="toAPP()">
                         </div>
                     </div>
                     <div class="footer__block">
@@ -167,7 +170,7 @@
                 </div>
                 <div class="footer__comm">
                     <img src="/imgs/Tilda_Icons_40_IT_letter.svg" alt="">
-                    <p><a href="mailto:vituchina11natasha11@gmail.com">vituchina11natasha11@gmail.com</a></p>
+                    <p><a href="mailto:652213kn56@gmail.com">652213kn56@gmail.com</a></p>
                 </div>
             </div>
         </div>
