--- a/index.html
+++ b/index.html
@@ -5,22 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" id="vp" content="width=device-width, initial-scale=1">
     <title>Просрочка</title>
-    <!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> -->
-    <link rel="stylesheet" type="text/css" media="(max-width: 640px)" href="/css/mobile.css">
-    <link rel="stylesheet" type="text/css" media="(min-width: 641px) and (max-width: 1023px)" href="/css/tab.css">
-    <link rel="stylesheet" type="text/css" media="(min-width: 1024px)" href="/css/web.css">
+    <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
     <script src="/js/action.js"></script>
-    <link rel="shortcut icon" href="/imgs/favicon.png" type="image/png">
+    <link rel="stylesheet" type="text/css" media="(max-width: 639px)" href="/css/mobile.css">
+    <link rel="stylesheet" type="text/css" media="(min-width: 640px) and (max-width: 1023px)" href="/css/tab.css">
+    <link rel="stylesheet" type="text/css" media="(min-width: 1024px)" href="/css/web.css">
 </head>
 
 <body>
     <div class="container">
         <div class="menu">
-
-            <!-- <input id="toggle" type="checkbox"> -->
-
-
-
             <div class="menu__item">
                 <p>Меню</p>
                 <div class="menu__down">
@@ -118,7 +112,6 @@
 
         <div class="footer">
             <!-- Иконочки от Tilda Publishing https://tilda.cc -->
-            <!-- <div class="footer__mobile"> -->
             <div class="footer__block">
                 <h1>Быстрая навигация</h1>
                 <ul>
@@ -153,7 +146,6 @@
                     </div>
                 </div>
             </div>
-            <!-- </div> -->
             <div class="footer__block">
                 <h1>Обратная связь</h1>
                 <div class="footer__comm">
