--- a/cups.html
+++ b/cups.html
@@ -67,29 +67,14 @@
                         <p>Бананка</p>
                         <p>Немного хлопья</p>
                         <p>270</p>
-                        <input type="button" class="add" value="Добавить" onclick="add(2)">
+                        <input type="button" class="add" value="Добавить" onclick="add('Бананка/270')">
                     </div>
-                </div>
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="" alt="">
-                    </div>
-                    <div class="content__back">
-
-                    </div>
-                </div>
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="" alt="">
-                    </div>
-                    <div class="content__back"></div>
                 </div>
             </div>
         </div>
 
         <div class="footer">
             <!-- Иконочки от Tilda Publishing https://tilda.cc -->
-            <!-- <div class="footer__mobile"> -->
             <div class="footer__block">
                 <h1>Быстрая навигация</h1>
                 <ul>
@@ -124,7 +109,6 @@
                     </div>
                 </div>
             </div>
-            <!-- </div> -->
             <div class="footer__block">
                 <h1>Обратная связь</h1>
                 <div class="footer__comm">
@@ -144,7 +128,7 @@
                     <p><a href="mailto:652213kn56@gmail.com">652213kn56@gmail.com</a></p>
                 </div>
             </div>
-        </div>н
+        </div>
     </div>
 </body>
 
