--- a/deliver.html
+++ b/deliver.html
@@ -59,14 +59,19 @@
 
         <div class="content">
             <div class="content__article">
-                <p>Доставляем только эстетическое удовольствие и моральное успокоение переворачивающимися карточками на
-                    страницах меню!</p>
+                <p>
+                    Доставляем только эстетическое удовольствие и моральное успокоение переворачивающимися карточками на
+                    страницах меню!
+                </p>
+                <p>
+                    Пункт выдачи таких же прекрасных курсовых работ находится по адресу Москва, Проспект Вернадского, д.
+                    78, Г-224.
+                </p>
             </div>
         </div>
 
         <div class="footer">
             <!-- Иконочки от Tilda Publishing https://tilda.cc -->
-            <!-- <div class="footer__mobile"> -->
             <div class="footer__block">
                 <h1>Быстрая навигация</h1>
                 <ul>
@@ -101,7 +106,6 @@
                     </div>
                 </div>
             </div>
-            <!-- </div> -->
             <div class="footer__block">
                 <h1>Обратная связь</h1>
                 <div class="footer__comm">
