--- a/eskimo.html
+++ b/eskimo.html
@@ -67,29 +67,31 @@
                         <p>Бетон</p>
                         <p>С привкусом бесконечных дорожных работ</p>
                         <p>150</p>
-                        <input type="button" class="add" value="Добавить" onclick="add(3)">
+                        <input type="button" class="add" value="Добавить" onclick="add('Бетон/150')">
                     </div>
                 </div>
                 <div class="content__card">
                     <div class="content__front">
-                        <img src="" alt="">
+                        <img src="/imgs/Солнышко.png" alt="">
                     </div>
                     <div class="content__back">
-
+                        <p>Солнышко</p>
+                        <p>Апельсиновый фруктовый лёд</p>
+                        <p>170</p>
+                        <input type="button" class="add" value="Добавить" onclick="add('Солнышко/170')">
                     </div>
                 </div>
-                <div class="content__card">
+                <!-- <div class="content__card">
                     <div class="content__front">
                         <img src="" alt="">
                     </div>
                     <div class="content__back"></div>
-                </div>
+                </div> -->
             </div>
         </div>
 
         <div class="footer">
             <!-- Иконочки от Tilda Publishing https://tilda.cc -->
-            <!-- <div class="footer__mobile"> -->
             <div class="footer__block">
                 <h1>Быстрая навигация</h1>
                 <ul>
@@ -124,7 +126,6 @@
                     </div>
                 </div>
             </div>
-            <!-- </div> -->
             <div class="footer__block">
                 <h1>Обратная связь</h1>
                 <div class="footer__comm">
