--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                         <img src="/imgs/радуга.png" alt="">
                     </div>
                     <div class="content__back">
-                        <p>Рожок «Радуга»</p>
+                        <p>Радуга</p>
                         <p>Всё натурально!</p>
                         <p>270</p>
-                        <input type="button" class="add" value="Добавить" onclick="add(1)">
+                        <input type="button" class="add" value="Добавить" onclick="add('Радуга/270')">
                     </div>
                 </div>
                 <div class="content__card">
@@ -75,37 +75,11 @@
                         <img src="/imgs/клубн рож.png" alt="">
                     </div>
                     <div class="content__back">
-                        <p>Клубничный рожок</p>
+                        <p>Хлубничка</p>
                         <p>Самый вкусный в вашей жизни!</p>
                         <p>300</p>
-                        <input type="button" class="add" value="Добавить" onclick="add(0)">
+                        <input type="button" class="add" value="Добавить" onclick="add('Хлубничка/300')">
                     </div>
-                </div>
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="" alt="">
-                    </div>
-                    <div class="content__back"></div>
-                </div>
-            </div>
-            <div class="content__row">
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="" alt="">
-                    </div>
-                    <div class="content__back"></div>
-                </div>
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="" alt="">
-                    </div>
-                    <div class="content__back"></div>
-                </div>
-                <div class="content__card">
-                    <div class="content__front">
-                        <img src="" alt="">
-                    </div>
-                    <div class="content__back"></div>
                 </div>
             </div>
         </div>
