--- a/about.html
+++ b/about.html
@@ -59,12 +59,15 @@
 
         <div class="content">
             <div class="content__article">
-                <p style="text-align: left;">Тут пока кратко...</p><br>
-                <p>Ресурс разработан как курсовая работа ученика ФГБОУ ВО «МИРЭА — Российский технологический
-                    университет» 2 курса Института информационных технологий группы ИКБО-01-19 Витухиной Н.А. по
-                    предмету
-                    Разработка клиентских частей интернет ресурсов и теме
-                    «Магазин мороженого».</p><br>
+                <p><img src="/imgs/герб.png" alt=""></p>
+                <p>Институт информационных технологий (ИТ)</p>
+                <p>Кафедра инструментального и прикладного программного обеспечения (ИиППО)</p>
+                <br><br><br>
+                <p>Курсовая работа<br>по дисциплине<br>«Разработка клиентских частей интернет-ресурсов»<br>на тему
+                    «Магазин мороженого»</p>
+                <br>
+                <p class="right">Студента 2 курса<br>группы ИКБО-01-19<br>Витухиной Натальи Александровны</p>
+                <br><br><br>
                 <p>Корзина работает в пределах одной сессии страницы, так как работа не предусматривает серверной части.
                 </p>
             </div>
@@ -72,7 +75,6 @@
 
         <div class="footer">
             <!-- Иконочки от Tilda Publishing https://tilda.cc -->
-            <!-- <div class="footer__mobile"> -->
             <div class="footer__block">
                 <h1>Быстрая навигация</h1>
                 <ul>
@@ -107,7 +109,6 @@
                     </div>
                 </div>
             </div>
-            <!-- </div> -->
             <div class="footer__block">
                 <h1>Обратная связь</h1>
                 <div class="footer__comm">
