--- a/about.html
+++ b/about.html
@@ -43,8 +43,7 @@
                 <div class="menu__down">
                     <div class="menu__types basket">
                         <div class="basket__main">
-                            <p id="start" title="0">Корзина пуста</p>
-                            <div id="stop"></div>
+                            <p id="start">Корзина пуста</p>
                         </div>
                         <div class="basket__total">
                             <div class="basket__left">
@@ -78,7 +77,7 @@
             <div class="footer__block">
                 <h1>Быстрая навигация</h1>
                 <ul>
-                    <li><a href="index.html">Меню</a>
+                    <li>Меню
                         <ul style="display: block; padding-left: 15px; line-height: 16px;">
                             <li><a href="index.html">Рожки</a></li>
                             <li><a href="eskimo.html">Эскимо</a></li>
