--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 <div class="menu__down">
                     <div class="menu__types basket">
                         <div class="basket__main">
-                            <p class="start" id="start">Корзина пуста</p>
-                            <p id="stop"></p>
+                            <p id="start">Корзина пуста</p>
                         </div>
                         <div class="basket__total">
                             <div class="basket__left">
@@ -75,10 +74,10 @@
                         <img src="/imgs/клубн рож.png" alt="">
                     </div>
                     <div class="content__back">
-                        <p>Хлубничка</p>
+                        <p>Клубничный водоворот</p>
                         <p>Самый вкусный в вашей жизни!</p>
                         <p>300</p>
-                        <input type="button" class="add" value="Добавить" onclick="add('Хлубничка/300')">
+                        <input type="button" class="add" value="Добавить" onclick="add('Клубничный водоворот/300')">
                     </div>
                 </div>
             </div>
@@ -89,7 +88,7 @@
             <div class="footer__block">
                 <h1>Быстрая навигация</h1>
                 <ul>
-                    <li><a href="index.html">Меню</a>
+                    <li>Меню
                         <ul style="display: block; padding-left: 15px; line-height: 16px;">
                             <li><a href="index.html">Рожки</a></li>
                             <li><a href="eskimo.html">Эскимо</a></li>
